<resources>
    <string name="app_name">Restaurant Review App</string>
    <string name="home">Home</string>
    <string name="my_reviews">My Reviews</string>
    <string name="favourites">Favourites</string>
    <string name="account">Account</string>
    <string name="register">Register</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="create_account">Create account</string>
    <string name="cancel">Cancel</string>
    <string name="email_required_msg">You must enter an email</string>
    <string name="password_required_msg">You must enter a password</string>
    <string name="password_length_msg">Password must be at least 6 characters</string>
    <string name="log_out">Log out</string>
    <string name="login">Login</string>
    <string name="feature_requires_login">You must be signed in to use this feature</string>
    <string name="login_error_msg">Could not log in to account</string>
    <string name="food_mania">Food Mania</string>
    <string name="home_of_restaurant_reviews">The Home of Restaurant Reviews</string>
    <string name="title">Title</string>
    <string name="address">Address</string>
    <string name="home_header">Home</string>
    <string name="restaurant">Restaurant</string>
    <string name="review">Review</string>
    <string name="restaurant_name">Restaurant name</string>
    <string name="restaurant_location">Restaurant Location</string>
    <string name="add_review">Add review</string>
    <string name="review_hint">Write about your experience</string>
    <string name="tag_location">Tag location</string>
    <string name="add_image">Add image</string>
    <string name="submit">Submit</string>
    <string name="review_empty_error">You must enter a review body</string>
    <string name="review_length_error">Review must be at least 4 characters</string>
    <string name="rating_empty_error">You must select a rating!</string>
    <string name="review_success_msg">Review successfully added</string>
    <string name="review_failed_msg">Could not add review</string>
    <string name="review_login_error">You need to be logged in to add a review</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm">Confirm</string>
    <string name="location_disabled_msg">Could not retrieve location as location services are disabled</string>
    <string name="location_denied_msg">Location permission denied!</string>
    <string name="edit_failed_msg">You cannot edit this review!</string>
    <string name="edit_login_required">You need to be logged in to edit a review</string>
    <string name="edit_success_msg">Review edit successful</string>
    <string name="edit_error_msg">Error editing review</string>
    <string name="your_reviews_title">Your Reviews</string>
    <string name="added_to_favourites_msg">Restaurant added to favourites</string>
    <string name="removed_from_favourites_msg">Restaurant removed from favourites</string>
    <string name="favourite_login_required_msg">You must be logged in to favourite an item!</string>
    <string name="add_restaurant">Add restaurant</string>
    <string name="login_required_msg">You need to be logged in to add a restaurant</string>
    <string name="new_restaurant">New Restaurant</string>
    <string name="category">Category</string>
    <string name="restaurant_name_error">You must enter a restaurant name</string>
    <string name="category_empty_msg">You must enter a category</string>
    <string name="restaurant_length_error">Restaurant name must be at least 3 characters</string>
    <string name="category_length_msg">Category must be at least 3 characters</string>
    <string name="location_required_message">You must tag a location</string>
    <string name="restaurant_added_msg">Restaurant successfully added</string>
    <string name="add_restaurant_failed">Could not add restaurant</string>
</resources>