<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddRestaurant"
    android:id="@+id/create_restaurant">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/add_restaurant_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_restaurant"
        android:textSize="20sp"
        android:layout_marginTop="70dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/restaurant_name_layout"
        app:layout_constraintRight_toRightOf="@id/restaurant_name_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/restaurant_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/restaurant_name"
        app:layout_constraintTop_toBottomOf="@id/add_restaurant_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/restaurant_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="35dp"
        android:hint="@string/category"
        app:layout_constraintTop_toBottomOf="@id/restaurant_name_layout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/category_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tag_location_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="30dp"
        android:text="@string/tag_location"
        app:backgroundTint="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toBottomOf="@id/category_layout"
        app:layout_constraintLeft_toLeftOf="@id/category_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/add_image"
        app:backgroundTint="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toBottomOf="@id/category_layout"
        app:layout_constraintLeft_toRightOf="@id/tag_location_btn"
        app:layout_constraintRight_toRightOf="@id/category_layout" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/attached_image"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:layout_constraintTop_toBottomOf="@id/add_image_btn"
        app:layout_constraintLeft_toLeftOf="@id/add_image_btn"
        app:layout_constraintRight_toRightOf="@id/add_image_btn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintTop_toBottomOf="@id/add_image_btn"
        app:layout_constraintRight_toRightOf="@id/add_image_btn"
        app:layout_constraintLeft_toLeftOf="@id/add_image_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:id="@+id/cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:strokeColor="?attr/colorPrimary"
        app:layout_constraintLeft_toLeftOf="@id/tag_location_btn"
        app:layout_constraintRight_toRightOf="@id/tag_location_btn"
        app:layout_constraintTop_toBottomOf="@id/tag_location_btn"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/tag_location_btn"
        app:layout_constraintLeft_toLeftOf="@id/tag_location_btn"
        app:layout_constraintRight_toRightOf="@id/tag_location_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>