<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RestaurantActivity"
    android:id="@+id/restaurant_page">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/restaurant_review_venue"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/restaurant_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/restaurant_name"
        app:layout_constraintTop_toBottomOf="@id/restaurant_review_venue"
        app:layout_constraintLeft_toLeftOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/category_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/restaurant_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurant_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/restaurant_location"
        android:drawableStart="@drawable/ic_location"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="@id/category_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurant_reviews_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/location"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="35dp"
        android:textSize="12sp"
        android:text="@string/add_review"
        app:layout_constraintBottom_toTopOf="@id/restaurant_reviews_recycler"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
