<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="8dp"
    app:cardCornerRadius="6dp"
    app:cardUseCompatPadding="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/restaurant_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/restaurant"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.appcompat.widget.AppCompatRatingBar
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:numStars="5"
            android:rating="0"
            android:stepSize="0.5"
            android:isIndicator="true"
            android:theme="@style/RatingBar"
            app:layout_constraintTop_toBottomOf="@id/restaurant_name"
            app:layout_constraintLeft_toLeftOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/time_created"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textSize="12sp"
            android:textColor="?attr/colorPrimaryVariant"
            app:layout_constraintTop_toBottomOf="@id/restaurant_name"
            app:layout_constraintLeft_toRightOf="@id/rating_bar"
            app:layout_constraintBottom_toTopOf="@id/restaurant_address" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/restaurant_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/address"
            android:textSize="12sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/ic_location"
            android:drawableTint="?attr/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/rating_bar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_review"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:text="@string/review"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/restaurant_address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/food_img"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@id/user_review"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
